--- a/task-manager/src/components/Sign in/Responsive.css
+++ b/task-manager/src/components/Sign in/Responsive.css
@@ -7,7 +7,7 @@
         transform: translateY(0);
         margin-top: 0 !important;
         align-items: center;
-    
+
     }
 
     #layer {
@@ -15,7 +15,7 @@
     }
 
 
-    
+
 
     #home-page-container {
         align-items: center;
@@ -29,15 +29,15 @@
         justify-content: center;
     }
 
-    .none{
+    .none {
         display: none;
     }
 
-    .unhide{
+    .unhide {
         display: flex;
     }
 
-    #sign-up{
+    #sign-up {
         /* margin-top: -250px; */
         height: auto;
         position: relative;
@@ -45,13 +45,13 @@
         transform: translateY(-50%);
     }
 
- 
+
 
 }
 
 
 @media screen and (min-width: 480px) and (max-width: 768px) {
-  
+
 
     .su-ns div input {
 
@@ -67,51 +67,80 @@
 
 
 @media screen and (min-width: 769px) and (max-width: 1000px) {
-    .form-container{
+    .form-container {
         width: 700px;
         justify-content: space-evenly;
     }
+
     .layer1 {
-       
+
         width: 230px !important;
-       
+
     }
-    
-   
-    
+
+
+
     @keyframes layer {
         from {
             margin-left: 235px;
             width: 460px;
         }
-    
+
         to {
             margin-left: 0;
             width: 230px;
         }
     }
-    
+
     /* --------- */
-    
-    
+
+
     .layer2 {
-        
+
         width: 460px !important;
-        
-    
+
+
     }
-    
-   
-    
+
+
+
     @keyframes layer2 {
         from {
             width: 460px;
             margin-left: 0;
         }
-    
+
         to {
             width: 230px;
             margin-left: 235px;
         }
     }
+}
+
+@media screen and (min-width: 280px) and (max-width: 320px) {
+
+    .sign-in,
+    .sign-up {
+        max-width: 240px !important;
+        overflow-x: hidden;
+    }
+
+    .sign-in {
+        margin-left: -20px;
+    }
+
+    .sign-in input,
+    .sign-up div input
+    {
+        width: 220px !important;
+    }
+    .su-inp-ph{
+width: 234px !important;
+    }
+
+    .su-ns {
+        flex-direction: column;
+    }
+
+    
 }
