--- a/task-manager/src/components/Sign in/Signin.css
+++ b/task-manager/src/components/Sign in/Signin.css
@@ -49,6 +49,7 @@ input {
     color: #fff;
     font-weight: bold;
     background-color: rgba(255, 255, 255, 0.281);
+    /* -webkit-text-fill-color: transparent; */
 }
 
 
@@ -259,3 +260,19 @@ h1 {
     color: red ;
 }
 
+#resp-error{
+    text-align: center;
+    margin-top: 60px;
+    color: transparent;
+    font-size: 10px;
+    background-color: red;
+    width: 280px;
+    display: flex;
+    /* justify-content: center; */
+    height: 120px;
+    align-self: center;
+}
+
+.resp-hide{
+    display: none !important;
+}
